--- a/instances/aws/WEB-INF/web.xml
+++ b/instances/aws/WEB-INF/web.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-  <servlet>
-    <servlet-name>Jersey Web Application</servlet-name>
-    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
    <servlet>
         <servlet-name>DefaultServlet</servlet-name>
         <servlet-class>org.apache.catalina.servlets.DefaultServlet</servlet-class>
@@ -13,10 +8,6 @@
     <servlet-name>DefaultServlet</servlet-name>
     <url-pattern>/static/*</url-pattern>
   </servlet-mapping>  
-  <servlet-mapping>
-    <servlet-name>Jersey Web Application</servlet-name>
-    <url-pattern>/*</url-pattern>
-  </servlet-mapping>
   <context-param>
     <param-name>com.horstmann.codecheck.repo.ext</param-name>
     <param-value>/data/ext</param-value>
@@ -34,12 +25,12 @@
     <param-value>/home/ubuntu/jfe1cc</param-value>
   </context-param>  
   <context-param>
-    <param-name>com.horstmann.codecheck.repo.udacity</param-name>
-    <param-value>/home/ubuntu/udacity</param-value>
+    <param-name>com.horstmann.codecheck.repo.bjlo</param-name>
+    <param-value>/home/ubuntu/bjlo</param-value>
   </context-param>  
   <context-param>
     <param-name>com.horstmann.codecheck.submissions</param-name>
-    <param-value>/home/ubuntu/codecheck</param-value>
+    <param-value>/home/ubuntu/submissions</param-value>
   </context-param>    
   <context-param>
     <param-name>com.horstmann.codecheck.reports</param-name>
