--- a/server/build.properties
+++ b/server/build.properties
@@ -1,13 +1,3 @@
 appserver.dir=${env.GLASSFISH_HOME}
-jsf.api.jar=${appserver.dir}/modules/jsf-api.jar
-servlet.api.jar=${appserver.dir}/modules/javax.servlet.jar
-el.api.jar=${appserver.dir}/modules/javax.servlet.jsp.jar
-jpa.api.jar=${appserver.dir}/modules/javax.persistence.jar
-jta.api.jar=${appserver.dir}/modules/javax.transaction.jar
-ejb.api.jar=${appserver.dir}/modules/javax.ejb.jar
-bean-validation.api.jar=${appserver.dir}/modules/bean-validator.jar
-cdi.api.jar=${appserver.dir}/modules/weld-osgi-bundle.jar
-mail.api.jar=${appserver.dir}/modules/mail.jar
-jaxrs.api.jar=${appserver.dir}/modules/jersey-core.jar
-deploy.dir=/data/domains/domain1/autodeploy
+deploy.dir=${appserver.dir}/domains/domain1/autodeploy
 
