--- a/server/build.xml
+++ b/server/build.xml
@@ -10,6 +10,9 @@
       <fileset dir="${appserver.dir}/modules">
 	 <include name="*.jar"/>
       </fileset>
+      <fileset dir="${basedir}/web/WEB-INF/lib">
+	 <include name="*.jar"/>
+      </fileset>
    </path>
    
    <target name="prepare" 
