--- a/server/web/WEB-INF/web.xml
+++ b/server/web/WEB-INF/web.xml
@@ -11,6 +11,7 @@
   <listener>
      <listener-class>Initializer</listener-class>
   </listener>  
+<!--
   <context-param>
     <param-name>com.horstmann.codecheck.repo.cs46af12</param-name>
     <param-value>/data/cay/archive/teach/fall2012/cs46a/homework</param-value>
@@ -27,6 +28,7 @@
     <param-name>com.horstmann.codecheck.repo.udacity</param-name>
     <param-value>/data/cay/current/web/com/udacity/cs1java/codecheck</param-value>
   </context-param>  
+-->
   <context-param>
     <param-name>com.horstmann.codecheck.submissions</param-name>
     <param-value>/tmp/codecheck</param-value>
@@ -36,13 +38,19 @@
     <param-value>/tmp/reports</param-value>
   </context-param>    
   <context-param>
+    <param-name>com.horstmann.codecheck.repo.ext</param-name>
+    <param-value>/tmp/ext</param-value>
+  </context-param>  
+  <context-param>
     <param-name>com.horstmann.codecheck.defaultcommand</param-name>
     <param-value>/data/cay/projects/codecheck/checker/codecheck -q {0} {1} {2} {3}</param-value>
   </context-param>    
+<!--
   <context-param>
     <param-name>com.horstmann.codecheck.gradecommand</param-name>
     <param-value>/data/cay/current/teach/util/gradeNetbrat {0} {1} {2} {3} {4} {5} {6} {7}</param-value>
   </context-param>  
+-->
   <context-param>
     <param-name>com.horstmann.codecheck.s3credentials</param-name>
     <param-value>/data/cay/projects/codecheck/instances/s3.properties</param-value>
