--- a/instances/ubuntu/WEB-INF/web.xml
+++ b/instances/ubuntu/WEB-INF/web.xml
@@ -21,7 +21,7 @@
   </context-param>    
   <context-param>
     <param-name>com.horstmann.codecheck.defaultcommand</param-name>
-    <param-value>/opt/codecheck/codecheck {0} {1} {2} {3}</param-value>
+    <param-value>/opt/codecheck/codecheck -s {0} {1} {2} {3}</param-value>
   </context-param>    
   <context-param>
     <param-name>com.horstmann.codecheck.s3credentials</param-name>
