--- a/checker/codecheck.env
+++ b/checker/codecheck.env
@@ -1,2 +1,2 @@
-JAVA_HOME=/opt/jdk1.8.0
-SCALA_HOME=/opt/scala
+if [ -z "${JAVA_HOME}" ] ; then JAVA_HOME=/opt/jdk1.8.0 ; fi
+if [ -z "${SCALA_HOME}" ] ; then SCALA_HOME=/opt/scala ; fi
