--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,3 +46,4 @@ play.i18n.langs = [ "en" ]
 com.horstmann.codecheck.submissions=/tmp/codecheck
 com.horstmann.codecheck.repo.ext=/tmp/ext
 com.horstmann.codecheck.s3credentials=/opt/codecheck/s3.properties
+com.horstmann.codecheck.defaultcommand="/opt/codecheck/codecheck -s -j {0} {1} {2} {3}"
