--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,3 +49,5 @@ com.horstmann.codecheck.s3credentials=/opt/codecheck/s3.properties
 com.horstmann.codecheck.json="/opt/codecheck/codecheck -s -j {0} {1} {2} {3}"
 com.horstmann.codecheck.jsonp="/opt/codecheck/codecheck -s -n {0} {1} {2} {3}"
 com.horstmann.codecheck.html="/opt/codecheck/codecheck -s {0} {1} {2} {3}"
+
+play.crypto.secret=${?APPLICATION_SECRET}
