--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,6 +47,7 @@ play.i18n.langs = [ "en" ]
 
 com.horstmann.codecheck.submissions=/tmp/codecheck
 com.horstmann.codecheck.repo.ext=/tmp/ext
+com.horstmann.codecheck.s3bucketsuffix=code-check.org
 com.horstmann.codecheck.s3credentials=/opt/codecheck/s3.properties
 com.horstmann.codecheck.json="/opt/codecheck/codecheck -s -j {0} {1} {2} {3}"
 com.horstmann.codecheck.jsonp="/opt/codecheck/codecheck -s -n {0} {1} {2} {3}"
