--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,7 +8,7 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.crypto.secret = "changeme"
+# play.http.secret.key = "changeme"
 
 # The application languages
 # ~~~~~
@@ -44,6 +44,24 @@ play.i18n.langs = [ "en" ]
 # play.evolutions.db.default.enabled=false
 
 
+# CORS
+# ~~~~~
+play.filters.enabled += play.filters.cors.CORSFilter
+play.filters.cors {
+ # allow all paths
+  pathPrefixes = ["/", "null"]
+}
+
+
+play.filters.disabled += play.filters.headers.SecurityHeadersFilter
+play.filters.disabled += play.filters.csrf.CSRFFilter
+play.filters.disabled += play.filters.hosts.AllowedHostsFilter
+
+play.filters.hosts {
+  # Allow requests to example.com, its subdomains, and localhost:9000.
+  # All hosts allowed
+  allowedOrigins = ["."]
+}
 
 com.horstmann.codecheck.submissions=/tmp/codecheck
 com.horstmann.codecheck.repo.ext=/tmp/ext
@@ -53,4 +71,15 @@ com.horstmann.codecheck.json="/opt/codecheck/codecheck -s -j {0} {1} {2} {3}"
 com.horstmann.codecheck.njs="/opt/codecheck/codecheck -s -n {0} {1} {2} {3}"
 com.horstmann.codecheck.html="/opt/codecheck/codecheck -s {0} {1} {2} {3}"
 
-play.crypto.secret=${?APPLICATION_SECRET}
+play.http.secret.key=${?APPLICATION_SECRET}
+play.server.http.idleTimeout = 180 seconds
+akka.actor.default-dispatcher.fork-join-executor.parallelism-max = 64
+akka.actor.default-dispatcher.fork-join-executor.parallelism-factor = 3.0
+akka.actor.codecheck-dispatcher {
+  type = Dispatcher
+  executor = "thread-pool-executor"
+  thread-pool-executor {
+     fixed-pool-size = 100
+  }
+  throughput = 1
+}
