--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,9 +67,9 @@ com.horstmann.codecheck.submissions=/tmp/codecheck
 com.horstmann.codecheck.repo.ext=/tmp/ext
 com.horstmann.codecheck.s3bucketsuffix=code-check.org
 com.horstmann.codecheck.s3credentials=/opt/codecheck/s3.properties
-com.horstmann.codecheck.json="/opt/codecheck/codecheck -s -j {0} {1} {2} {3}"
-com.horstmann.codecheck.njs="/opt/codecheck/codecheck -s -n {0} {1} {2} {3}"
-com.horstmann.codecheck.html="/opt/codecheck/codecheck -s {0} {1} {2} {3}"
+com.horstmann.codecheck.json="/opt/codecheck/codecheck -s -j {0} {1} {2}"
+com.horstmann.codecheck.njs="/opt/codecheck/codecheck -s -n {0} {1} {2}"
+com.horstmann.codecheck.html="/opt/codecheck/codecheck -s {0} {1} {2}"
 
 play.http.secret.key=${?APPLICATION_SECRET}
 play.server.http.idleTimeout = 180 seconds
