--- a/checker/build.xml
+++ b/checker/build.xml
@@ -83,6 +83,7 @@
            <include name="runprog"/>
            <include name="runprog.apparmor"/>
            <include name="killold"/>
+           <include name="interleaveio"/>
            <include name="lib/**"/>
         </fileset>
     </copy>
