--- a/conf/application.conf
+++ b/conf/application.conf
@@ -83,3 +83,7 @@ akka.actor.codecheck-dispatcher {
   }
   throughput = 1
 }
+
+play.http.session.httpOnly=true
+play.http.session.sameSite="None"
+play.http.session.secure=true
