--- a/conf/application.conf
+++ b/conf/application.conf
@@ -87,3 +87,4 @@ akka.actor.codecheck-dispatcher {
 play.http.session.httpOnly=true
 play.http.session.sameSite="None"
 play.http.session.secure=true
+play.http.session.maxAge=1d
