--- a/conf/application.conf
+++ b/conf/application.conf
@@ -64,7 +64,7 @@ play.filters.hosts {
 }
 
 com.horstmann.codecheck.submissions=/tmp/codecheck
-com.horstmann.codecheck.repo.ext=/tmp/ext
+# com.horstmann.codecheck.repo.ext=/tmp/ext
 com.horstmann.codecheck.s3bucketsuffix=code-check.org
 com.horstmann.codecheck.s3credentials=/opt/codecheck/s3.properties
 com.horstmann.codecheck.json="/opt/codecheck/codecheck -s -j {0} {1} {2}"
