--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,3 +88,9 @@ play.http.session.httpOnly=true
 play.http.session.sameSite="None"
 play.http.session.secure=true
 play.http.session.maxAge=1d
+
+# https://www.playframework.com/documentation/2.8.3/HTTPServer#Configuring-trusted-proxies
+# This doesn't actually work--see the comment in LTIAssignment.java, but maybe it will one day.
+# Per https://cloud.google.com/load-balancing/docs/https#target-proxies, the trusted proxy is
+# either in the range 130.211.0.0/22 or 35.191.0.0/16, but "or" is not supported by Play.
+play.http.forwarded.trustedProxies=["0.0.0.0/0", "::/0"]
