--- a/conf/application.conf
+++ b/conf/application.conf
@@ -66,8 +66,7 @@ play.filters.hosts {
 # com.horstmann.codecheck.repo.ext=/tmp/ext
 com.horstmann.codecheck.s3bucketsuffix=code-check.org
 com.horstmann.codecheck.s3credentials=/opt/codecheck/s3.properties
-#com.horstmann.codecheck.remote="http://localhost:8080/api/upload"
-com.horstmann.codecheck.remote="https://comrun-ic7y4d2pyq-uc.a.run.app/api/upload"
+com.horstmann.codecheck.remote="http://localhost:8080/api/upload"
 com.horstmann.codecheck.storeLocation=/opt/codecheck/codecheck.jks
 
 play.http.secret.key=${?APPLICATION_SECRET}
