--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,7 +8,7 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-# play.http.secret.key = "changeme"
+play.http.secret.key = "changeme"
 
 # The application languages
 # ~~~~~
@@ -63,12 +63,6 @@ play.filters.hosts {
   allowedOrigins = ["."]
 }
 
-# com.horstmann.codecheck.repo.ext=/tmp/ext
-com.horstmann.codecheck.s3bucketsuffix=code-check.org
-com.horstmann.codecheck.s3credentials=/opt/codecheck/s3.properties
-com.horstmann.codecheck.remote="http://localhost:8080/api/upload"
-com.horstmann.codecheck.storeLocation=/opt/codecheck/codecheck.jks
-
 play.http.secret.key=${?APPLICATION_SECRET}
 play.server.http.idleTimeout = 180 seconds
 akka.actor.default-dispatcher.fork-join-executor.parallelism-max = 64
@@ -92,3 +86,11 @@ play.http.session.maxAge=1d
 # Per https://cloud.google.com/load-balancing/docs/https#target-proxies, the trusted proxy is
 # either in the range 130.211.0.0/22 or 35.191.0.0/16, but "or" is not supported by Play.
 play.http.forwarded.trustedProxies=["0.0.0.0/0", "::/0"]
+
+# com.horstmann.codecheck.repo.ext=/tmp/ext
+com.horstmann.codecheck.s3bucketsuffix=code-check.org
+com.horstmann.codecheck.remote="http://localhost:8080/api/upload"
+com.horstmann.codecheck.storeLocation=conf/codecheck.jks
+com.horstmann.codecheck.s3.region="us-west-1"
+
+include "production"
