--- a/conf/application.conf
+++ b/conf/application.conf
@@ -87,10 +87,7 @@ play.http.session.maxAge=1d
 # either in the range 130.211.0.0/22 or 35.191.0.0/16, but "or" is not supported by Play.
 play.http.forwarded.trustedProxies=["0.0.0.0/0", "::/0"]
 
-# com.horstmann.codecheck.repo.ext=/tmp/ext
-com.horstmann.codecheck.s3bucketsuffix=code-check.org
-com.horstmann.codecheck.remote="http://localhost:8080/api/upload"
-com.horstmann.codecheck.storeLocation=conf/codecheck.jks
-com.horstmann.codecheck.s3.region="us-west-1"
+com.horstmann.codecheck.repo.ext=/opt/codecheck/ext
+com.horstmann.codecheck.comrun.local="/opt/codecheck/comrun"
 
 include "production"
