--- a/comrun/Dockerfile
+++ b/comrun/Dockerfile
@@ -2,6 +2,7 @@ FROM ubuntu:20.04
 
 RUN apt-get update && apt-get install --no-install-recommends -y \
     wget \
+    grep \
     zip \
     unzip \
     sysstat \
