--- a/comrun/Dockerfile
+++ b/comrun/Dockerfile
@@ -23,6 +23,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     racket \
     scala \
     locales \
+    strace \
  && rm -rf /var/lib/apt/lists/*
 
 # https://stackoverflow.com/questions/28405902/how-to-set-the-locale-inside-a-debian-ubuntu-docker-container
