--- a/comrun/Dockerfile
+++ b/comrun/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu:20.04
 
+RUN add-apt-repository -y ppa:plt/racket
+
 RUN apt-get update && apt-get install --no-install-recommends -y \
     wget \
     grep \
