Deploy staging comrun

--- a/comrun/Dockerfile
+++ b/comrun/Dockerfile
@@ -1,5 +1,8 @@
 FROM ubuntu:20.04
 
+RUN apt-get update && \
+    apt-get install -y software-properties-common
+
 RUN add-apt-repository -y ppa:plt/racket
 
 RUN apt-get update && apt-get install --no-install-recommends -y \
