--- a/conf/production.conf
+++ b/conf/production.conf
@@ -5,3 +5,4 @@ com.horstmann.codecheck.s3.secretKey=""
 com.horstmann.codecheck.s3bucketsuffix="mybucket.mydomain.com"
 com.horstmann.codecheck.s3.region="us-west-1" # Your AWS region such as 
 com.horstmann.codecheck.repo.ext=""
+com.horstmann.codecheck.storeLocation=""
