Deploy staging comrun

--- a/comrun/Dockerfile
+++ b/comrun/Dockerfile
@@ -45,7 +45,7 @@ ENV COMRUN_USER=comrunner
 RUN echo "Defaults:root !syslog, !pam_session" >> /etc/sudoers
 RUN echo "Defaults:comrunner !syslog, !pam_session" >> /etc/sudoers
 
-COPY --chmod +x bin /opt/codecheck
+COPY --chmod 755 bin /opt/codecheck
 #RUN chmod +x /opt/codecheck/comrun
 
 RUN --chmod 733 mkdir /tmp/codecheck
