Added changes to AssigmentLocalConnector class in AssigmentConnector class.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -89,5 +89,6 @@ play.http.forwarded.trustedProxies=["0.0.0.0/0", "::/0"]
 
 com.horstmann.codecheck.repo.ext=/opt/codecheck/ext
 com.horstmann.codecheck.comrun.local="/opt/codecheck/comrun"
+com.horstmann.codecheck.db = "/opt/codecheck/db"
 
 include "production"
