--- a/conf/application.conf
+++ b/conf/application.conf
@@ -87,8 +87,13 @@ play.http.session.maxAge=1d
 # either in the range 130.211.0.0/22 or 35.191.0.0/16, but "or" is not supported by Play.
 play.http.forwarded.trustedProxies=["0.0.0.0/0", "::/0"]
 
-com.horstmann.codecheck.repo.ext=/opt/codecheck/ext
-com.horstmann.codecheck.comrun.local="/opt/codecheck/comrun"
-com.horstmann.codecheck.db = "/opt/codecheck/db"
+# These are used for local simulations of s3, dynamodb, or comrun
+# To use cloud services, define 
+# com.horstmann.codecheck.s3.region
+# com.horstmann.codecheck.dynamodb.region
+# com.horstmann.codecheck.comrun.remote
+com.horstmann.codecheck.s3.local=/opt/codecheck/repo
+com.horstmann.codecheck.dynamodb.local=/opt/codecheck/db
+com.horstmann.codecheck.comrun.local=/opt/codecheck/comrun
 
 include "production"
