--- a/conf/application.conf
+++ b/conf/application.conf
@@ -92,8 +92,8 @@ play.http.forwarded.trustedProxies=["0.0.0.0/0", "::/0"]
 # com.horstmann.codecheck.s3.region
 # com.horstmann.codecheck.dynamodb.region
 # com.horstmann.codecheck.comrun.remote
-com.horstmann.codecheck.s3.local=/opt/codecheck/repo
-com.horstmann.codecheck.dynamodb.local=/opt/codecheck/db
-com.horstmann.codecheck.comrun.local=/opt/codecheck/comrun
+com.horstmann.codecheck.s3.local="/opt/codecheck/repo"
+com.horstmann.codecheck.dynamodb.local="/opt/codecheck/db"
+com.horstmann.codecheck.comrun.local="/opt/codecheck/comrun"
 
 include "production"
