Deploy staging comrun

--- a/comrun/Dockerfile
+++ b/comrun/Dockerfile
@@ -28,9 +28,14 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     locales \
     strace \
     rustc \
-	kotlin \
  && rm -rf /var/lib/apt/lists/*
- 
+
+
+ENV KOTLIN_VERSION 2.0.20
+RUN wget "https://github.com/JetBrains/kotlin/releases/download/v${KOTLIN_VERSION}/kotlin-compiler-${KOTLIN_VERSION}.zip" && \
+    unzip kotlin-compiler-${KOTLIN_VERSION}.zip -d / && mv /kotlinc /usr/lib/ && rm kotlin-compiler-${KOTLIN_VERSION}.zip
+ENV PATH="/usr/lib/kotlinc/bin:${PATH}"  
+	
 # https://stackoverflow.com/questions/28405902/how-to-set-the-locale-inside-a-debian-ubuntu-docker-container
 RUN locale-gen --no-purge en_US.UTF-8
 ENV LANG=en_US.UTF-8 LANGUAGE=en_US:en LC_ALL=en_US.UTF-8
