Deploy staging comrun

--- a/comrun/Dockerfile
+++ b/comrun/Dockerfile
@@ -32,7 +32,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
 
 
 ENV KOTLIN_VERSION 2.0.20
-RUN wget "https://github.com/JetBrains/kotlin/releases/download/v${KOTLIN_VERSION}/kotlin-compiler-${KOTLIN_VERSION}.zip" && \
+RUN wget -q "https://github.com/JetBrains/kotlin/releases/download/v${KOTLIN_VERSION}/kotlin-compiler-${KOTLIN_VERSION}.zip" && \
     unzip kotlin-compiler-${KOTLIN_VERSION}.zip -d / && mv /kotlinc /usr/lib/ && rm kotlin-compiler-${KOTLIN_VERSION}.zip
 ENV PATH="/usr/lib/kotlinc/bin:${PATH}"  
 	
