--- a/conf/application.conf
+++ b/conf/application.conf
@@ -87,13 +87,18 @@ play.http.session.maxAge=1d
 # either in the range 130.211.0.0/22 or 35.191.0.0/16, but "or" is not supported by Play.
 play.http.forwarded.trustedProxies=["0.0.0.0/0", "::/0"]
 
-# These are used for local simulations of s3, dynamodb, or comrun
+# These are used for local simulations of storage, or comrun
 # To use cloud services, define 
 # com.horstmann.codecheck.s3.region
 # com.horstmann.codecheck.dynamodb.region
+# or for a SQL database
+# com.horstmann.codecheck.sql.driver
+# com.horstmann.codecheck.sql.TODO
+# and for cloud code execution
 # com.horstmann.codecheck.comrun.remote
-com.horstmann.codecheck.s3.local="/opt/codecheck/repo"
-com.horstmann.codecheck.dynamodb.local="/opt/codecheck/db"
+com.horstmann.codecheck.storage.local="/opt/codecheck/storage"
 com.horstmann.codecheck.comrun.local="/opt/codecheck/comrun"
+com.horstmann.codecheck.storage.type=local
+# can also be aws or sql
 
 include "production"
