Deploy staging codeckeck-quarkus

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -52,7 +52,6 @@ play.filters.cors {
   pathPrefixes = ["/", "null"]
 }
 
-
 play.filters.disabled += play.filters.headers.SecurityHeadersFilter
 play.filters.disabled += play.filters.csrf.CSRFFilter
 play.filters.disabled += play.filters.hosts.AllowedHostsFilter
@@ -87,18 +86,25 @@ play.http.session.maxAge=1d
 # either in the range 130.211.0.0/22 or 35.191.0.0/16, but "or" is not supported by Play.
 play.http.forwarded.trustedProxies=["0.0.0.0/0", "::/0"]
 
-# These are used for local simulations of storage, or comrun
-# To use cloud services, define 
+# The default is local simulation of storage
+com.horstmann.codecheck.storage.local="/opt/codecheck/storage"
+
+# To use cloud services,  
+# define com.horstmann.codecheck.storage.type as aws or sql
+# For AWS, define
+# com.horstmann.codecheck.aws.accessKey
+# com.horstmann.codecheck.aws.secretKey
+# com.horstmann.codecheck.s3.bucketsuffix
 # com.horstmann.codecheck.s3.region
 # com.horstmann.codecheck.dynamodb.region
-# or for a SQL database
+# For a SQL database
 # com.horstmann.codecheck.sql.driver
-# com.horstmann.codecheck.sql.TODO
-# and for cloud code execution
-# com.horstmann.codecheck.comrun.remote
-com.horstmann.codecheck.storage.local="/opt/codecheck/storage"
+# com.horstmann.codecheck.sql.url
+
+# This is for running comrun locally
 com.horstmann.codecheck.comrun.local="/opt/codecheck/comrun"
-com.horstmann.codecheck.storage.type=local
-# can also be aws or sql
+
+# For remote comrun execution define
+# com.horstmann.codecheck.comrun.remote
 
 include "production"
